--- a/playground/pubspec.yaml
+++ b/playground/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   canvas_lib:
     path: ../canvas_lib
 
+dev_dependencies:
+  browser: '^0.10.0+2'
+
 # Uncomment the following in sdk 1.24+ to make pub serve
 # use dartdevc (webdev.dartlang.org/tools/dartdevc).
 #web:
